--- a/HenrysBookstore/Web.config
+++ b/HenrysBookstore/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-HenrysBookstore-20161212072332.mdf;Initial Catalog=aspnet-HenrysBookstore-20161212072332;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="HENRYEntities" connectionString="metadata=res://*/BookstoreEntities.csdl|res://*/BookstoreEntities.ssdl|res://*/BookstoreEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=bitweb3.nwtc.edu;initial catalog=HENRY;persist security info=True;user id=asp23;password=ZudRG8LA;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
