Book Details page done

--- a/HenrysBookstore/HenrysBookstore.csproj
+++ b/HenrysBookstore/HenrysBookstore.csproj
@@ -317,6 +317,7 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Home\Inventory.cshtml" />
     <Content Include="Views\Shared\_sidebar.cshtml" />
+    <Content Include="Views\Home\BookDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
