--- a/HenrysBookstore/HenrysBookstore.csproj
+++ b/HenrysBookstore/HenrysBookstore.csproj
@@ -320,6 +320,7 @@
     <Content Include="Views\Shared\_sidebar.cshtml" />
     <Content Include="Views\Home\BookDetails.cshtml" />
     <Content Include="Views\Home\BrowseByAuthor.cshtml" />
+    <Content Include="Views\Home\BrowseByPublisher.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
